tests/typecheck/should_compile/T1.hs
module Main where


import Biegunka
import Biegunka.Source.Git


main :: IO ()
main = biegunka id script (execute id)
 where
  script = profile "main" $
    git_ "git@github.com:ghc/ghc" "ghc"
